welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:15: error: ';' expected but 'else' found.
}else{
 ^max1020:22: error: Unmatched closing brace '}' ignored here
 }
 ^